titulos de imagen

--- a/blog.html
+++ b/blog.html
@@ -220,21 +220,21 @@
                 <img src="images/sop/Raza-2.png" data-ngsrc="images/sop/Raza-2.png" data-nanogallery2-lightbox
                 alt="Agregando Raza" />
                 <img src="images/sop/Raza-3.png" data-ngsrc="images/sop/Raza-3.png" data-nanogallery2-lightbox
-                alt="Editando de Raza-3" />
+                alt="Editando Raza" />
 
                 <img src="images/sop/Especie-1.png" data-ngsrc="images/sop/Especie-1.png" data-nanogallery2-lightbox
                 alt="Listado de Especies" />
                 <img src="images/sop/Especie-2.png" data-ngsrc="images/sop/Especie-2.png" data-nanogallery2-lightbox
                 alt="Agregando Especie" />
                 <img src="images/sop/Especie-3.png" data-ngsrc="images/sop/Especie-3.png" data-nanogallery2-lightbox
-                alt="Editando de Especie-3" />
+                alt="Editando Especie" />
 
                 <img src="images/sop/Vacuna-1.png" data-ngsrc="images/sop/Vacuna-1.png" data-nanogallery2-lightbox
                 alt="Listado de Vacunas" />
                 <img src="images/sop/Vacuna-2.png" data-ngsrc="images/sop/Vacuna-2.png" data-nanogallery2-lightbox
                 alt="Agregando Vacuna" />
                 <img src="images/sop/Vacuna-3.png" data-ngsrc="images/sop/Vacuna-3.png" data-nanogallery2-lightbox
-                alt="Editando de Vacuna-3" />
+                alt="Editando Vacuna" />
 
 
             </div>
