--- a/blog.html
+++ b/blog.html
@@ -235,13 +235,16 @@
                 alt="Agregando Vacuna" />
                 <img src="images/sop/Vacuna-3.png" data-ngsrc="images/sop/Vacuna-3.png" data-nanogallery2-lightbox
                 alt="Editando Vacuna" />
+                <img src="images/sop/Menu_user.png" data-ngsrc="images/sop/Vacuna-3.png" data-nanogallery2-lightbox
+                alt="Menu de Usuario" />
+                <img src="images/sop/Imagen3.png" data-ngsrc="images/sop/Vacuna-3.png" data-nanogallery2-lightbox
+                alt="Verificación eliminar" />
 
 
             </div>
             <!-- ### end of the gallery definition ### -->
 
             <!---->
-
 
             <h4 style="margin-top:1em;">Costo de la aplicación móvil</h4>
             <p>Será una aplicación gratuita que permita reportar mascotas callejeras generando una excelente forma de
@@ -253,6 +256,23 @@
               animales. Además, al tener un acceso libre y sencillo, se asegura que la aplicación sea utilizada por
               personas de todos los niveles socioeconómicos, lo que permite que más personas se involucren en el cuidado
               y protección de los animales en situación de calle.</p>
+
+
+              
+            <h4>Link de descarga de APK de la aplicación</h4>
+            <p class="font-weight-light font-italic">
+              *Se presenta a continuación el link donde se puede descargar la aplicación:
+            </p>
+            <a class="font-weight-light font-italic" href="https://drive.google.com/drive/folders/1vVRD4BY3WEOJiksHBX3ok-PVmxbpausx?usp=sharing">Presiona aquí para descargar!</a>
+            <br>
+            <h4>Link de descarga del manúal de usuario</h4>
+            <br>
+            <p class="font-weight-light font-italic">
+              *A continuación se presenta el link donde se puede descargar el manual de usuario para la correcta
+              utilización de la aplicación, junto con la explicación de cada una de sus partes:
+            </p>
+            <a class="font-weight-light font-italic" href="https://drive.google.com/drive/folders/1vVRD4BY3WEOJiksHBX3ok-PVmxbpausx?usp=sharing">Presiona aquí para descargar!</a>
+            <br>
           </div>
         </div>
       </div>
